# projective-drawings-cv

./: BEST_PRACTICES.md  CODE_REVIEW_SUMMARY.md  IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
config/: settings.yaml
docs/specs/: wzt_logic.md
src/: config.py  main.py
src/analysis/: wzt_analyzer.py
src/core/: config.py  image_processing.py  ontology.py  vectorization.py
src/features/: color.py  extraction.py  memory.py  processing.py  semantics.py
src/labeling/: app.py
src/reporting/: reporter.py
src/tests/: base_test.py  test_trainer.py
src/training/: data_loader.py  trainer.py
src/validation/: validator.py
tests/: test_data_loader.py  test_data_loader_checklist.py  test_extraction.py  test_feature_extraction.py  test_memory.py  test_ontology.py  test_preprocessor.py  test_vectorization.py  test_wzt_analyzer.py
