[project]
name = "projective-drawings-cv"
version = "0.1.0"
description = "Automate the interpretation of projective drawing tests (Wartegg, House-Tree-Person) for children aged 3-12 using Computer Vision."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "opencv-python",
    "pillow",
    "torch",
    "torchvision",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "mediapipe",
    "ultralytics",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/tests", "src/data", "src/features", "src/models", "src/visualization"]
